--- a/ChatApp/Client/Pages/Chat.razor
+++ b/ChatApp/Client/Pages/Chat.razor
@@ -7,6 +7,8 @@
 
 <h1>Chat</h1>
 
+<button class="btn btn-primary" @onclick="Send">Send Message</button>
+
 <ul id="messagesList">
     @foreach (var message in messages)
     {
@@ -17,6 +19,7 @@
 @code {
     private HubConnection? hubConnection;
     private List<string> messages = new List<string>();
+    private int counte = 0;
 
     protected override async Task OnInitializedAsync()
     {
@@ -24,19 +27,20 @@
             .WithUrl(NavigationManager.ToAbsoluteUri("/chathub"))
             .Build();
 
-        hubConnection.On<string, string, string>("ReceiveMessage", (chatroomId, username, message) =>
+        hubConnection.On<int, string, string>("ReceiveMessage", (chatroomId, username, message) =>
         {
-            messages.Add(message);
+            messages.Add($"message {counte++}");
+            StateHasChanged();
         });
 
         await hubConnection.StartAsync();
     }
 
-    public async Task Send(string message)
+    public async Task Send()
     {
         if (hubConnection?.State == HubConnectionState.Connected)
         {
-            await hubConnection.SendAsync("SendMessage", message);
+            await hubConnection.SendAsync("SendMessage", 1,"Teste");
         }
     }
 
