--- a/ChatApp/Server/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
+++ b/ChatApp/Server/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using ChatApp.Server.Models
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
