--- a/ChatApp/Client/Pages/Index.razor
+++ b/ChatApp/Client/Pages/Index.razor
@@ -2,8 +2,5 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1>Hello, welcome to the Blazor Chat!</h1>
+<h3>Select a room from the list on the side or create a new one</h3>
