--- a/ChatApp/Client/Pages/Chat.razor
+++ b/ChatApp/Client/Pages/Chat.razor
@@ -1,4 +1,4 @@
-﻿@page "/chat"
+﻿@page "/chat/{ChatroomId}"
 @implements IAsyncDisposable
 @attribute [Authorize]
 @inject NavigationManager NavigationManager
@@ -17,26 +17,33 @@
 
 @if (IsConnected)
 {
+    <ul id="messagesList">
+        @foreach (var message in messages)
+        {
+            <li>@message</li>
+        }
+    </ul>
+
+
     <input @bind="userInput" placeholder="Type your message" />
-    <button @onclick="() => Send(userInput)">Enviar</button>
+    <button @onclick="() => Send(userInput)">Send</button>
 }
 else
 {
     <p>Connecting...</p>
 }
 
-<ul id="messagesList">
-    @foreach (var message in messages)
-    {
-        <li>@message</li>
-    }
-</ul>
+
 
 @code {
+    [Parameter]
+    public string ChatroomId { get; set; }
+
     private HubConnection? hubConnection;
     private List<string> messages = new List<string>();
     private string userInput = "";
     private string username = "";
+
 
     protected override async Task OnInitializedAsync()
     {
@@ -75,7 +82,7 @@ else
     {
         if (hubConnection?.State == HubConnectionState.Connected)
         {   
-            await hubConnection.SendAsync("SendMessage", 1, username, message);
+            await hubConnection.SendAsync("SendMessage", int.Parse(ChatroomId), username, message);
             userInput = "";
         }
     }
