--- a/ChatApp/Client/Pages/Chat.razor
+++ b/ChatApp/Client/Pages/Chat.razor
@@ -5,15 +5,13 @@
 @inject IAccessTokenProvider TokenProvider
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject HttpClient Http
-@using ChatApp.Shared.Model;
-@using Microsoft.AspNetCore.Authorization;
-@using Microsoft.AspNetCore.Components.WebAssembly.Authentication;
-@using Microsoft.AspNetCore.SignalR.Client;
+@using ChatApp.Shared.Model
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.AspNetCore.SignalR.Client
 @using Microsoft.AspNetCore.Components.Authorization
 
 <PageTitle>Chat</PageTitle>
-
-
 
 <h1>Chat</h1>
 
@@ -25,8 +23,6 @@
             <li>@message</li>
         }
     </ul>
-
-
     <input @bind="userInput" placeholder="Type your message" />
     <button @onclick="() => Send(userInput)">Send</button>
 }
@@ -34,8 +30,6 @@ else
 {
     <p>Connecting...</p>
 }
-
-
 
 @code {
     [Parameter]
@@ -46,8 +40,18 @@ else
     private string userInput = "";
     private string username = "";
 
-
     protected override async Task OnInitializedAsync()
+    {
+        await InitializeConnection();
+        await LoadMessages();
+    }
+
+    protected override async Task OnParametersSetAsync()
+    {
+        await LoadMessages();
+    }
+
+    private async Task InitializeConnection()
     {
         var tokenResult = await TokenProvider.RequestAccessToken();
 
@@ -56,11 +60,11 @@ else
             var accessToken = token.Value;
 
             hubConnection = new HubConnectionBuilder()
-           .WithUrl(NavigationManager.ToAbsoluteUri("/chathub"), options =>
-           {
-               options.AccessTokenProvider = () => Task.FromResult<string?>(accessToken);
-           })
-           .Build();
+                .WithUrl(NavigationManager.ToAbsoluteUri("/chathub"), options =>
+                {
+                    options.AccessTokenProvider = () => Task.FromResult<string?>(accessToken);
+                })
+                .Build();
 
             hubConnection.On<int>("ReceiveMessage", async (chatroomId) =>
             {
@@ -80,35 +84,21 @@ else
         {
             username = user.Identity.Name;
         }
-
-        await LoadMessages();
-    }
-
-
-    protected override async Task OnParametersSetAsync()
-    {
-        await LoadMessages();
     }
 
     private async Task LoadMessages()
     {
         var url = $"Message/list/{ChatroomId}";
-
         var responseMessages = await Http.GetFromJsonAsync<Message[]>(url);
         messages.Clear();
-
-        foreach (var message in responseMessages)
-        {            
-            messages.Add($"{message.Timestamp} {message.UserId}:{message.Content}");
-        }
-
+        messages.AddRange(responseMessages.Select(m => $"{m.Timestamp} {m.UserId}: {m.Content}"));
         StateHasChanged();
     }
 
     public async Task Send(string message)
     {
         if (hubConnection?.State == HubConnectionState.Connected)
-        {       
+        {
             await hubConnection.SendAsync("SendMessage", int.Parse(ChatroomId), username, message);
             userInput = "";
         }
